# UDPClient

./: client  client.cpp  client2  client2.cpp  config.h  data.txt  server
Server/: CMakeLists.txt  server.cpp
